# fastkit

./: .gitignore  CLAUDE.md  FASTKIT_ARQUITETURA_COMPLETA.md  HARDENING_PLAN.md  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  ruff.toml
.claude/: settings.json
.github/workflows/: ci.yml  test.yml
docs/: README.md
docs/admin/: actions.md  client-js.md  columns.md  dashboard.md  dependent-selects.md  fields.md  filters.md  inlines.md  login-and-captcha.md  overrides.md  permissions.md  related-widget.md  reports-in-admin.md  resources.md  templates-rendering.md  theme.md  translations.md  uploads-files.md
docs/concepts/: apps-lifecycle.md  errors-and-i18n.md  events.md  health-checks.md  providers.md  request-context.md  resilience.md  response-envelope.md  runtime-registries.md  service-container.md
docs/getting-started/: configuration.md  installation.md  overview.md  project-setup.md
docs/guides/: add-an-app.md  add-cache-provider.md  add-captcha-provider.md  add-locale.md  add-mail-provider.md  add-model-and-resource.md  add-report.md  configure-storage-local-s3-r2.md  custom-action.md  custom-field.md  custom-filter.md  customize-login.md  extend-admin-client.md  handle-uploads.md  multitenant-login.md  override-templates.md  scheduled-tasks-worker.md
docs/reference/: cli-commands.md  envelope-shape.md  error-codes.md  settings.md
examples/demo/: pyproject.toml
examples/demo/app/: admin.py  auth_routes.py  demo_app.py  gdpr.py  geo.py  main.py  models.py  reports.py  seed.py  settings.py  tasks.py  translations.py  uploads.py  worker.py
examples/demo/app/admin/: __init__.py  activity_log.py  category.py  content.py  geo_sample.py  helpers.py  language.py  product.py  report_run.py  role.py  scheduled_task.py  showcase.py  subcategory.py  survey.py  task_execution.py  tenant.py  user.py
examples/demo/app/models/: __init__.py  category.py  geo_sample.py  product.py  showcase.py  subcategory.py  survey.py  survey_question.py
examples/demo/app/static/: showcase.js
examples/demo/app/templates/: index.html
examples/demo/app/templates/admin/: _extra_js.html
examples/demo/config/: base.toml  dev.toml  test.toml
examples/demo/tests/: conftest.py  test_demo.py
frontend/admin/: package.json  playwright.config.js
frontend/admin/tests/: admin.spec.js
tests/: test_package_boundaries.py
